# Small_projects

Google_test_examp/: CMakeLists.txt  main.cpp
Google_test_examp/Tests/: ClassTest.h  test.cpp
Google_test_examp/sorts/: CMakeLists.txt  sorts_main.cpp
Long_numbers_cpp/: CMakeLists.txt  long_int.cpp  long_int.h  main.cpp
